{{$NEXT}}

0.01 2023-05-21T15:01:10Z
  Initial release; ExtraClauses, BangOverrides, Upsert, WindowFunction and CaseExpr support!
  SUPER EXPERIMENTAL!