@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+  Update hashrefref support to hook _recurse_fields such that join pruning no longer
+  explodes
+
 0.01 2023-05-21T15:01:10Z
   Initial release; ExtraClauses, BangOverrides, Upsert, WindowFunction and CaseExpr support!
   SUPER EXPERIMENTAL!
